# iit-coman-ros-pkg

./: .gitignore  CMakeLists.txt  README.md
coman_config/: coman.yaml  coman_basic.yaml  coman_example.yaml  coman_joint_map.yaml
coman_config/hal/: coman_dummy.yaml  coman_sim.yaml
coman_control/: CMakeLists.txt  mainpage.dox  manifest.xml
coman_control/cfg/: send_trajectories.cfg  send_trajectories.cfgc
coman_control/config/: coman_control.yaml
coman_control/launch/: coman_control.launch
coman_control/src/: how_to_write_trj_file  send_trajectories.cpp
coman_gazebo/: mainpage.dox  manifest.xml
coman_gazebo/database/: database.config
coman_gazebo/database/coman/: coman.sdf
coman_gazebo/database/coman_hands/: coman.sdf  coman_hands.config  manifest.xml
coman_gazebo/database/coman_no_forearms/: coman.sdf  manifest.xml
coman_gazebo/database/coman_softhand/: coman.sdf  coman_softhand.config  manifest.xml
coman_gazebo/launch/: coman_world.launch
coman_gazebo/sdf/: coman.sdf  manifest.xml  model.config
coman_gazebo/sdf/conf/: coman_gazebo.ini  coman_gazebo_left_arm.ini  coman_gazebo_left_leg.ini  coman_gazebo_right_arm.ini  (+2 more)
coman_gazebo/worlds/: coman.world
coman_msgs/: mainpage.dox  manifest.xml
coman_msgs/msg/: ForceTorque.msg  JointExtraInformation.msg  PID.msg
coman_srdf/: mainpage.dox  manifest.xml
coman_srdf/srdf/: coman.acm  coman.srdf  coman.srdf.xacro  coman_capsules.acm  coman_hands.acm  coman_hands.srdf  coman_hands_capsules.acm  coman_no_forearms.acm  coman_no_forearms.srdf  coman_no_forearms_capsules.acm  coman_softhand.acm  coman_softhand.srdf  coman_softhand_capsules.acm
coman_state_publisher/: CMakeLists.txt  mainpage.dox  manifest.xml
coman_state_publisher/launch/: coman.launch
coman_state_publisher/src/: coman_state_publisher.cpp
coman_urdf/: CMakeLists.txt  mainpage.dox  manifest.xml  rvizconfig.rviz
coman_urdf/launch/: coman.launch  coman_capsules_slider.launch  coman_no_forearms.launch  coman_slider.launch
coman_urdf/script/: classic_create_urdf_srdf_sdf.sh  create_acm.sh  create_urdf_and_sdf.sh  create_urdf_srdf_sdf.sh  frames.gv  gazebowtf.py  get_model_params.py  load_acm.py  model_config.sh  save_acm.py
coman_urdf/urdf/: coman.gazebo  coman.gazebo.wtf  coman.gazebo.xacro  coman.urdf  coman.urdf.xacro  coman_base.urdf.xacro  coman_config.urdf.xacro  coman_floating_base.urdf.xacro  coman_hands.urdf  coman_materials.urdf.xacro  coman_no_forearms.urdf  coman_plain.gazebo  coman_robot.urdf.xacro  coman_robot_plain.urdf.xacro  coman_softhand.urdf  coman_transmission.urdf.xacro  foot_reference_frame.urdf.xacro  microstrain_3dmgx2_imu.gazebo.xacro  soft_hand.urdf.xacro  yarp_control.gazebo.xacro
moveit_coman/coman_moveit_configuration/: .setup_assistant  CMakeLists.txt  package.xml
(+292 files in other folders)
